--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-/*#F60C89*/
+/*#8A05BD*/ 
 /*
 .espacohero{
     min-height: 340px;
@@ -241,7 +241,7 @@ border: 3px solid rgba(60, 179, 113);
 }
 
 .shoping-cart .total-cost{
-	background: #F60C89;
+	background: #B97DCA;
 	margin: 0 -34px;
 	text-align: right;
 	padding: 22px 0;
@@ -269,7 +269,7 @@ border: 3px solid rgba(60, 179, 113);
 	padding: 18px 47px 14px;
 	border-radius: 50px;
 	text-transform: uppercase;
-	background: #F60C89;
+	background: #B97DCA;
 	color: #fff;
 	line-height: normal;
 	cursor: pointer;
@@ -560,7 +560,7 @@ ol {
 	right: 0;
 	height: 4px;
 	width: 80px;
-	background: #F60C89;
+/*	background: #8A05BD;*/
 	content: "";
 	margin: 0 auto;
 }
@@ -598,7 +598,7 @@ ol {
 	color: #ffffff;
 	text-transform: uppercase;
 	font-weight: 700;
-	background: #F60C89;
+/*	background: #8A05BD;*/
 /*	letter-spacing: 2px;*/
 }
 
@@ -609,7 +609,7 @@ ol {
 	text-transform: uppercase;
 	display: inline-block;
 	padding: 13px 30px 12px;
-	background: #F60C89;
+/*	background: #8A05BD;*/
 	border: none;
 }
 
@@ -887,7 +887,7 @@ ol {
 }
 
 .header__menu ul li .header__menu__dropdown li:hover>a {
-	color: #F60C89;
+/*	color: #8A05BD;*/
 }
 
 .header__menu ul li .header__menu__dropdown li a {
@@ -898,7 +898,7 @@ ol {
 }
 
 .header__menu ul li.active a {
-	color: #F60C89;
+/*	color: #8A05BD;*/
 }
 
 .header__menu ul li:hover .header__menu__dropdown {
@@ -908,7 +908,7 @@ ol {
 }
 
 .header__menu ul li:hover>a {
-	color: #F60C89;
+/*	color: #8A05BD;*/
 }
 
 .header__menu ul li:last-child {
@@ -962,7 +962,7 @@ ol {
 .header__cart ul li a span {
 	height: 13px;
 	width: 13px;
-	background: #F60C89;
+/*	background: #8A05BD;*/
 	font-size: 10px;
 	color: #ffffff;
 	line-height: 13px;
@@ -1140,7 +1140,7 @@ ol {
 
 .hero__search__phone__icon {
 	font-size: 18px;
-	color: #F60C89;
+/*	color: #8A05BD;*/
 	height: 50px;
 	width: 50px;
 	background: #f5f5f5;
@@ -1182,7 +1182,7 @@ ol {
 	text-transform: uppercase;
 	font-weight: 700;
 	letter-spacing: 4px;
-	color: #F60C89;
+/*	color: #8A05BD;*/
 }
 
 .hero__text h2 {
@@ -1286,7 +1286,7 @@ ol {
 	bottom: -2px;
 	width: 100%;
 	height: 2px;
-	background: #F60C89;
+/*	background: #8A05BD;*/
 	content: "";
 	opacity: 0;
 }
@@ -1334,8 +1334,8 @@ ol {
 }
 
 .featured__item__pic__hover li:hover a {
-	background: #F60C89;
-	border-color: #F60C89;
+/*	background: #8A05BD;*/
+/*	border-color: #8A05BD;*/
 }
 
 .featured__item__pic__hover li:hover a i {
@@ -1770,8 +1770,8 @@ ol {
 }
 
 .product__item__pic__hover li:hover a {
-	background: #F60C89;
-	border-color: #F60C89;
+/*	background: #8A05BD;*/
+/*	border-color: #8A05BD;*/
 }
 
 .product__item__pic__hover li:hover a i {
@@ -1969,7 +1969,7 @@ ol {
 }
 
 .filter__option span:hover {
-	color: #F60C89;
+/*	color: #8A05BD;*/
 }
 
 .product__item {
@@ -2010,8 +2010,10 @@ ol {
 }
 
 .product__item__pic__hover li:hover a {
-	background: #F60C89;
-	border-color: #F60C89;
+/*
+	background: #8A05BD;
+	border-color: #8A05BD;
+*/
 }
 
 .product__item__pic__hover li:hover a i {
@@ -2091,8 +2093,10 @@ ol {
 
 .product__pagination a:hover,
 .blog__pagination a:hover {
-	background: #F60C89;
-	border-color: #F60C89;
+/*
+	background: #8A05BD;
+	border-color: #8A05BD;
+*/
 	color: #ffffff;
 }
 
@@ -2613,8 +2617,10 @@ ol {
 }
 
 .checkout__input__checkbox label input:checked~.checkmark {
-	background: #F60C89;
-	border-color: #F60C89;
+/*
+	background: #8A05BD;
+	border-color: #8A05BD;
+*/
 }
 
 .checkout__input__checkbox label input:checked~.checkmark:after {
@@ -2855,7 +2861,7 @@ ol {
 }
 
 .blog__sidebar__item ul li a:hover {
-	color: #F60C89;
+/*	color: #8A05BD;*/
 }
 
 .blog__sidebar__search {
@@ -3075,7 +3081,7 @@ ol {
 }
 
 .blog__details__widget .blog__details__social a:hover {
-	color: #F60C89;
+/*	color: #8A05BD;*/
 }
 
 .blog__details__widget .blog__details__social a:last-child {
@@ -3193,7 +3199,7 @@ ol {
 }
 
 .footer__widget .footer__widget__social a:hover {
-	background: #F60C89;
+/*	background: #8A05BD;*/
 	color: #ffffff;
 	border-color: #ffffff;
 }
@@ -3231,7 +3237,7 @@ ol {
 
 .contact__widget span {
 	font-size: 36px;
-	color: #F60C89;
+/*	color: #8A05BD;*/
 }
 
 .contact__widget h4 {
@@ -3270,7 +3276,7 @@ ol {
 
 .map .map-inside i {
 	font-size: 48px;
-	color: #F60C89;
+/*	color: #8A05BD;*/
 	position: absolute;
 	bottom: -75px;
 	left: 50%;
@@ -3527,7 +3533,7 @@ ol {
 	.humberger__menu__cart ul li a span {
 		height: 13px;
 		width: 13px;
-		background: #F60C89;
+/*		background: #8A05BD;*/
 		font-size: 10px;
 		color: #ffffff;
 		line-height: 13px;
@@ -3593,7 +3599,7 @@ ol {
 		-webkit-border-radius: 0;
 		border-radius: 0;
 		background: transparent;
-		color: #F60C89;
+/*		color: #8A05BD;*/
 	}
 	.humberger__menu__wrapper .slicknav_nav .slicknav_row,
 	.humberger__menu__wrapper .slicknav_nav a {
@@ -3797,7 +3803,7 @@ ol {
 	.humberger__menu__cart ul li a span {
 		height: 13px;
 		width: 13px;
-		background: #F60C89;
+/*		background: #8A05BD;*/
 		font-size: 10px;
 		color: #ffffff;
 		line-height: 13px;
@@ -3863,7 +3869,7 @@ ol {
 		-webkit-border-radius: 0;
 		border-radius: 0;
 		background: transparent;
-		color: #F60C89;
+/*		color: #8A05BD;*/
 	}
 	.humberger__menu__wrapper .slicknav_nav .slicknav_row,
 	.humberger__menu__wrapper .slicknav_nav a {
@@ -4075,7 +4081,7 @@ ol {
 	width: 162px;
 	height: 162px;
 	border-radius: 50%;
-	background: #f51167;
+/*	background: #8A05BD;*/
 	text-align: center;
 	padding-top: 20px;
 	-webkit-transform: rotate(45deg);
@@ -4274,7 +4280,7 @@ ol {
 	height: 5px;
 	left: 0;
 	top: 8px;
-	border: 1px solid #ec105a;
+/*	border: 1px solid #8A05BD;*/
 	border-radius: 50%;
 	-webkit-transition: all 0.2s;
 	-o-transition: all 0.2s;
@@ -4289,7 +4295,7 @@ ol {
 	width: 7px;
 	height: 7px;
 	top: 6px;
-	background: #ec105a;
+/*	background: #8A05BD;*/
 }
 
 .fw-latest-post-widget .lp-item {
@@ -4328,12 +4334,12 @@ ol {
 
 .fw-latest-post-widget .lp-content .readmore {
 	font-size: 12px;
-	color: #f51167;
+/*	color: #8A05BD;*/
 }
 
 .contact-widget .con-info span {
 	float: left;
-	color: #f51167;
+/*	color: #8A05BD;*/
 	margin-right: 15px;
 	overflow: hidden;
 }
